# RMRune

./: .gitignore  CMakeLists.txt  LeNet-model-old  README.md  ]  coord.txt  function_test  outGPIO.txt  output  output.txt  run.sh
Settings/: .Settings.xml.swl  .Settings.xml.swm  .Settings.xml.swn  .Settings.xml.swo  .Settings.xml.swp  Settings.xml  Settings2.xml  bestSettings.xml  out_camera_data.xml
Settings/Camera/: 1.xml  2.xml  3.xml  4.xml  5.xml  n1.xml
Settings/setting_with_new_gravity/: Settings_0.3.xml
TestVideo/: Night7.webm
source/: .ImgCP.hpp.swp  .RuneDetector.hpp.swp  AngleSolver.cpp  AngleSolver.hpp  Cluster.hpp  DigitRecognizer.cpp  DigitRecognizer.h  ImgCP.cpp  ImgCP.hpp  MnistRecognizer.cpp  MnistRecognizer.h  RMVideoCapture.cpp  RMVideoCapture.hpp  RuneDetector.cpp  RuneDetector.cpp~  RuneDetector.hpp  Settings.cpp  Settings.hpp  Voter.hpp  define.hpp  main.cpp  main.cpp.orig  main.cpp~  manifoldGPIO.cpp  manifoldGPIO.h  serial_main.cpp
source/test/: Voter.hpp  main.cpp
